--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@ description: A description about my blog homepage
 
 <div id="posts">
   <h2>Blog Posts</h2>
-  <ul>
+  <ul class="media-list">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li class="media">
+        <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+        <span class="muted">{{ post.date | date_to_string }}</span>
+      </li>
     {% endfor %}
   </ul>
 </div>
 
 <div id="pages">
   <h2>Pages</h2>
-  <ul>
+  <ul class="media-list">
     {% for page in site.html_pages %}
       {% if page.title %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        <li class="media">
+          <h4><a href="{{ page.url }}">{{ page.title }}</a></h4>
+        </li>
       {% endif %}
     {% endfor %}
   </ul>
