--- a/index.html
+++ b/index.html
@@ -6,11 +6,59 @@ description: A description about my blog homepage
 <div id="posts">
   <h2>Blog Posts</h2>
   <ul class="media-list">
-    {% for post in site.posts %}
+    {% for post in paginator.posts %}
       <li class="media">
         <h4><a href="{{ post.url }}">{{ post.title }}</a> <small class="muted">le {{ post.date | date_to_string }}</small></h4>
       </li>
     {% endfor %}
+  </ul>
+</div>
+
+<div class="pagination">
+  <ul>
+    {% if paginator.previous_page %}
+    <li>
+      {% if paginator.previous_page == 1 %}
+      <a href="/">&laquo;</a>
+      {% else %}
+      <a href="/page{{paginator.previous_page}}">&laquo;</a>
+      {% endif %}
+    </li>
+    {% else %}
+    <li class="disabled">
+      <span>&laquo;</span>
+    </li>
+    {% endif %}
+
+    {% if paginator.page == 1 %}
+      <li class="active">
+        <span>1</span>
+    {% else %}
+      <li>
+        <a href="/">1</a>    
+    {% endif %}
+      </li>
+
+    {% for count in (2..paginator.total_pages) %}
+      {% if count == paginator.page %}
+        <li class="active">
+          <span>{{count}}</span>  
+      {% else %}
+        <li>
+          <a href="/page{{count}}">{{count}}</a>
+      {% endif %}
+        </li>
+    {% endfor %}
+
+    {% if paginator.next_page %}
+    <li>
+      <a href="/page{{paginator.next_page}}">&raquo;</a>
+    </li>
+    {% else %}
+    <li class="disabled">
+      <span>&raquo;</span>
+    </li>
+    {% endif %}
   </ul>
 </div>
 
