--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 ---
 layout: default
 description: A description about my blog homepage
+title: Blog Posts
 ---
 
-<div class="span8 offset2 content">
+<div class="span3 content aside">
+  <div class="padding10">
+    <h4>Florent Viel</h4>
+    <hr>
+    <img src="http://www.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=220" class="img-polaroid" />
+  </div>
+</div>
+<div class="span6 content">
   <div class="posts padding10">
-    <h2>Blog Posts</h2>
     <ul class="media-list">
       {% for post in paginator.posts %}
         <li class="media">
@@ -60,19 +67,6 @@ description: A description about my blog homepage
         <span>&raquo;</span>
       </li>
       {% endif %}
-    </ul>
-  </div>
-
-  <div class="pages padding10">
-    <h2>Pages</h2>
-    <ul class="media-list">
-      {% for page in site.html_pages %}
-        {% if page.title %}
-          <li class="media">
-            <h4><a href="{{ page.url }}">{{ page.title }}</a></h4>
-          </li>
-        {% endif %}
-      {% endfor %}
     </ul>
   </div>
 </div>
