--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-description: A description about my blog homepage
-title: Blog Posts
+description: Ma vie, mes délires
 ---
 
   <div class="posts padding10">
@@ -16,7 +15,10 @@ title: Blog Posts
           </div>
           {% endif %}
           <br />
+          <p>{{ post.content | split:'<!--break-->' | first }}</p>
+          {% if post.content contains '<!--break-->' %}
           <a href="{{ post.url }}" class="btn btn-small">Continuer à lire <i class="icon-circle-arrow-right"></i></a>
+          {% endif %}
         </li>
       {% endfor %}
     </ul>
