--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<header class="clean" style="height: 350px; background-image: url({{ site.cover }});" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
+<header class="clean" style="height: 350px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
   {% include top.html %}
   <a href="{{ site.url }}">
     <div id="home-title" class="site-icon-home" style="background-image: url({{ site.icon }});" data-stellar-ratio="0.5"></div>
@@ -34,6 +34,11 @@ title: Home
   {% endif %}
 </nav>
 </div>
-<footer class="clean" style="background-image: url({{ site.cover }}); background-position: bottom; height: 60px;">
+<footer class="clean" style="background-position: bottom; height: 60px;">
   <p class="copyright">&copy; {{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+    $('header,footer').geopattern("{{ site.title }}");
+  });
+</script>
