--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Home
 ---
 
-<header class="clean" style="height: 350px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
+{% capture pattern %}{% uri_geo_pattern text=site.title %}{% endcapture %}
+<header class="clean" style="background-image: {{ pattern }}; height: 350px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
   {% include top.html %}
   <a href="{{ site.url }}">
     <div id="home-title" class="site-icon-home" style="background-image: url({{ site.icon }});" data-stellar-ratio="0.5"></div>
@@ -34,11 +35,6 @@ title: Home
   {% endif %}
 </nav>
 </div>
-<footer class="clean" style="background-position: bottom; height: 60px;">
+<footer class="clean" style="background-image: {{ pattern }}; background-position: bottom; height: 60px;">
   <p class="copyright">&copy; {{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-    $('header,footer').geopattern("{{ site.title }}");
-  });
-</script>
